<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Park4Me</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="conf_pass">Confirm password</string>
    <string name="enterusername">Enter your username</string>
    <string name="enterpassword">Enter your password</string>
    <string name="enteremail">Enter your e-mail</string>
    <string name="enterconf_pass">Enter your password again</string>
    <string name="new_user">Create new user</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registercomp">Register Company</string>
    <string name="title_activity_registeractivity">Registeractivity</string>
    <string name="title_activity_comp_login">CompLogin</string>

</resources>